--- a/src/components/banner.scss
+++ b/src/components/banner.scss
@@ -4,11 +4,6 @@
     img{
         width: 90%;
     }
-    @media only screen and (max-width: 992px) {
-        .image{
-            display: none;
-        }
-    }
     .text {
         margin-top: 10%;
         padding: 1rem;
@@ -29,6 +24,11 @@
         }
         .premium-button{
             margin: auto;
+        }
+        @media only screen and (max-width: 992px) {
+            h1{
+                font-size: 40px;
+            }
         }
     }
 }
