--- a/src/components/singlespeaker.scss
+++ b/src/components/singlespeaker.scss
@@ -29,27 +29,60 @@
                     font-size:50px;
                     font-weight:400;
                     color: #fafafa;
+            }@media only screen and (max-width: 992px){
+                h1{
+                    font-size:35px;
+                }
             }
         }
     }
     .card{
+        max-width: 50%;
         height:100%;
+        background: #fff;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 5px 20px rgba(0,0,0,0.5);
+        transition: 0.3s ease-in-out;
+        margin : auto;
+        border-radius:5px;
+            img{
+                position: relative;
+            width:100%;
+            height:100%;
+            top: -20px;
+            right:20px;
+            z-index: 1;
+            border-radius:5px;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+            }        
+        .content{
+            position: relative;
+            margin-top: -140px;
+            padding: 10px 15px;
+            text-align: center;
+            color: #111;
+            visibility: hidden;
+            opacity: 0;
+            border-radius:5px;
+            transition: 0.3s ease-in-out;
+        }
+        
     }
-    .imgbx{
-        float:right;
-        background-color: white;
-        width:300px;
-        height:100%;
-        box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-    }
-    .content{
-        background-color: pink;
-        position: relative;
-        height:100%;
-        margin-top: -20px;
-        padding: 10px 15px;
-        text-align: center;
-        color: #111;
-        margin-right: 20px;
+}
+
+@media only screen and (max-width: 992px) {
+    .singlespeaker{
+        margin-top: 50px;
+        .text{
+            margin-bottom: 20px;
+        }
+        .card{
+            height: 300px;
+            width:90%;
+            max-width: 320px;
+            float: none;
+            margin: auto;
+        }
     }
 }
