--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: Circular-black;
+  src: url('../../images/font/circular-black.ttf');
+}
+
+@font-face {
+  font-family: Circular-book;
+  src: url('../../images/font/circular-book.ttf');
+}
+
+@font-face {
+  font-family: Circular-bold;
+  src: url('../../images/font/circular-bold.ttf');
+}
+
+@font-face {
+  font-family: Circular-medium;
+  src: url('../../images/font/circular-medium.ttf');
+}
+
+
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -82,8 +103,7 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Circular-black;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -278,8 +298,7 @@ h3 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Circular-bold;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.38316rem;
@@ -398,6 +417,7 @@ p {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
+  font-family: Circular-book;
   margin-bottom: 1.45rem;
 }
 pre {
