--- a/src/components/misc/premiumButton.scss
+++ b/src/components/misc/premiumButton.scss
@@ -15,6 +15,7 @@
   line-height: 1.68;
   letter-spacing: .1rem;
   font-size: 1rem;
+  font-family: Circular-medium;
   background-color: rgb(220,34,116);
   background-size: 500px;
   background-repeat: no-repeat;
